objects/Workspace_Business_Driver__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Workspace Additional Information</description>
        <label>Additional Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Setting the Digital Agenda</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Identify &amp; Design</fullName>
                </value>
                <value>
                    <fullName>Prove Value</fullName>
                </value>
                <value>
                    <fullName>Deployed &amp; Scale</fullName>
                </value>
                <value>
                    <fullName>Realized Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Workspace Applciation</description>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASR SP</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>EAF / Data Virtualization</fullName>
                </value>
                <value>
                    <fullName>EMSP</fullName>
                </value>
                <value>
                    <fullName>ENT Routing</fullName>
                </value>
                <value>
                    <fullName>ENT Switching</fullName>
                </value>
                <value>
                    <fullName>IoT DDP</fullName>
                </value>
                <value>
                    <fullName>IoT Routing</fullName>
                </value>
                <value>
                    <fullName>IoT Solution Plus</fullName>
                </value>
                <value>
                    <fullName>IoT Switching</fullName>
                </value>
                <value>
                    <fullName>Meraki</fullName>
                </value>
                <value>
                    <fullName>Metapod</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Self Optimized Network</fullName>
                </value>
                <value>
                    <fullName>Servers</fullName>
                </value>
                <value>
                    <fullName>Small Cell / Packet Core</fullName>
                </value>
                <value>
                    <fullName>SP Routing</fullName>
                </value>
                <value>
                    <fullName>SP Video Software and Solutions</fullName>
                </value>
                <value>
                    <fullName>SW Analytics &amp; Automation (SPG)</fullName>
                </value>
                <value>
                    <fullName>SXP</fullName>
                </value>
                <value>
                    <fullName>UCS / Data Center</fullName>
                </value>
                <value>
                    <fullName>Video Surveillance / IoT CSS</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Driver__c</fullName>
        <description>Workspace Business Driver</description>
        <label>Business Driver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance/Regulatory</fullName>
                </value>
                <value>
                    <fullName>Enabler of Digital Capability &amp; Services</fullName>
                </value>
                <value>
                    <fullName>Improve Delivery</fullName>
                </value>
                <value>
                    <fullName>Improve Efficiency</fullName>
                </value>
                <value>
                    <fullName>Improve Employee Safety</fullName>
                </value>
                <value>
                    <fullName>Increase Revenue Streams</fullName>
                </value>
                <value>
                    <fullName>Protect Assets</fullName>
                </value>
                <value>
                    <fullName>Public Safety</fullName>
                </value>
                <value>
                    <fullName>Reduce Costs</fullName>
                </value>
                <value>
                    <fullName>Strategic Position</fullName>
                </value>
                <value>
                    <fullName>Workforce Multiplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Workspace__c</fullName>
        <description>Related Opportunity Workspace</description>
        <label>Opportunity Workspace</label>
        <referenceTo>AT_Workspace__c</referenceTo>
        <relationshipLabel>Workspace Business Drivers</relationshipLabel>
        <relationshipName>Workspace_Business_Drivers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Solution_Offer__c</fullName>
        <description>Workspace Solution Offer</description>
        <label>Solution Offer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CDP Lighting</fullName>
                </value>
                <value>
                    <fullName>Collaborative Knowledge</fullName>
                </value>
                <value>
                    <fullName>Connected Assets</fullName>
                </value>
                <value>
                    <fullName>Connected Factory for Location</fullName>
                </value>
                <value>
                    <fullName>Connected Factory Networks</fullName>
                </value>
                <value>
                    <fullName>Connected Factory Security</fullName>
                </value>
                <value>
                    <fullName>Connected Factory Wireless</fullName>
                </value>
                <value>
                    <fullName>Data Optimization</fullName>
                </value>
                <value>
                    <fullName>Digital Building</fullName>
                </value>
                <value>
                    <fullName>FAN</fullName>
                </value>
                <value>
                    <fullName>Intelligent Branch</fullName>
                </value>
                <value>
                    <fullName>Mass Transit</fullName>
                </value>
                <value>
                    <fullName>Mobile Experience</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Ransomware Defense</fullName>
                </value>
                <value>
                    <fullName>Roadway</fullName>
                </value>
                <value>
                    <fullName>Cisco Vision</fullName>
                </value>
                <value>
                    <fullName>Substation Automation</fullName>
                </value>
                <value>
                    <fullName>Substation Security</fullName>
                </value>
                <value>
                    <fullName>Virtual Expertise</fullName>
                </value>
                <value>
                    <fullName>Workforce Productivity</fullName>
                </value>
                <value>
                    <fullName>Workplace Design</fullName>
                </value>
                <value>
                    <fullName>Workplace Management</fullName>
                </value>
                <value>
                    <fullName>Workplace Productivity</fullName>
                </value>
                <value>
                    <fullName>Workplace Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Workspace Business Driver</description>
    <label>Workspace Business Driver</label>
    <nameField>
        <displayFormat>BD-{0}</displayFormat>
        <label>Workspace Business Driver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workspace Business Drivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>